added general file to delete any entity through post

--- a/JattanaNursury/Views/Categories/Index.cshtml
+++ b/JattanaNursury/Views/Categories/Index.cshtml
@@ -70,7 +70,7 @@
 
 @section Scripts
 {
-    <script src="~/js/categories.js" asp-append-version="true"></script>
+    <script src="~/js/general.js" asp-append-version="true"></script>
     <script type="text/javascript">
         const url = "@Url.Action("Delete","Categories")";
         $(function () {
