--- a/JattanaNursury/Areas/Identity/Pages/Account/Login.cshtml
+++ b/JattanaNursury/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,121 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
+<style>
+    .m-form {
+        background-color: rgb(68 95 118);
+        border-radius: 10px;
+        backdrop-filter: blur(10px);
+        border: 2px solid rgba(255,255,255,0.1);
+        box-shadow: 0 0 40px rgba(8,7,16,0.6);
+        padding: 2rem 2rem;
+    }
+
+        .m-form * {
+            color: #ffffff;
+            letter-spacing: 0.5px;
+            outline: none;
+            border: none;
+        }
+
+
+
+        .m-form .input {
+            display: block;
+            width: 100%;
+            background-color: rgba(255,255,255,0.07);
+            border-radius: 3px;
+            padding: 0.4rem 0.8rem;
+            margin-top: 8px;
+            font-weight: 300;
+        }
+
+    ::placeholder {
+        color: #e5e5e5;
+    }
+
+    @@media(max-width:500px) {
+        .nor-link {
+            border: none;
+            border-radius: 2px;
+            background-color: #83b271;
+            color: white !important;
+        }
+
+        .right-container input {
+            margin-bottom: 1rem;
+        }
+    }
+
+
+    .m-form .button {
+        margin-top: 50px;
+        width: 100%;
+        background-color: #8eb97e;
+        color: white;
+        padding: 15px 0;
+        font-size: 18px;
+        font-weight: 600;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .f-select, .f-select option {
+        color: #445f76;
+    }
+
+    .login-card {
+        max-width: 500px;
+    }
+</style>
+
+
+<div class="container mt-4">
+    <div class="w-50 m-auto login-card">
+        <section>
+            <form class="m-form " id="account" method="post">
+                <h2>LOGIN</h2>
+                <div class="row">
+                    <div class="col-12">
+                        <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+                        <div>
+                            <label asp-for="Input.Email">Email</label>
+                            <input asp-for="Input.Email" class="input" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        </div>
+                        <div class="mt-2">
+                            <label asp-for="Input.Password">Password</label>
+                            <input asp-for="Input.Password" class="input" autocomplete="current-password" aria-required="true" placeholder="password" />
+                            <span asp-validation-for="Input.Password" class="text-danger"></span>
+                        </div>
+                        <div class="mt-2">
+                            <label asp-for="Input.RememberMe" class="mb-3 d-flex align-items-center gap-2">
+                                <input class="form-check-input m-0" asp-for="Input.RememberMe" />
+                                <span>@Html.DisplayNameFor(m => m.Input.RememberMe)</span>
+                            </label>
+                        </div>
+                        <div>
+                            <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex flex-column mt-3 gap-2">
+
+                    <a id="forgot-password" class="btn btn-danger d-block" asp-page="./ForgotPassword">Forgot your password?</a>
+
+                    <a asp-page="./Register" class="btn btn-success d-block" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+
+                    <a id="resend-confirmation" class="btn btn-secondary d-block" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+
+                </div>
+            </form>
+        </section>
+    </div>
+</div>
+
+
+
+@* <h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-4">
         <section>
@@ -78,7 +192,7 @@
             }
         </section>
     </div>
-</div>
+</div> *@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
