--- a/JattanaNursury/Areas/Identity/Pages/Account/Login.cshtml
+++ b/JattanaNursury/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,74 +5,10 @@
     ViewData["Title"] = "Log in";
 }
 
-<style>
-    .m-form {
-        background-color: rgb(68 95 118);
-        border-radius: 10px;
-        backdrop-filter: blur(10px);
-        border: 2px solid rgba(255,255,255,0.1);
-        box-shadow: 0 0 40px rgba(8,7,16,0.6);
-        padding: 2rem 2rem;
-    }
-
-        .m-form * {
-            color: #ffffff;
-            letter-spacing: 0.5px;
-            outline: none;
-            border: none;
-        }
-
-
-
-        .m-form .input {
-            display: block;
-            width: 100%;
-            background-color: rgba(255,255,255,0.07);
-            border-radius: 3px;
-            padding: 0.4rem 0.8rem;
-            margin-top: 8px;
-            font-weight: 300;
-        }
-
-    ::placeholder {
-        color: #e5e5e5;
-    }
-
-    @@media(max-width:500px) {
-        .nor-link {
-            border: none;
-            border-radius: 2px;
-            background-color: #83b271;
-            color: white !important;
-        }
-
-        .right-container input {
-            margin-bottom: 1rem;
-        }
-    }
-
-
-    .m-form .button {
-        margin-top: 50px;
-        width: 100%;
-        background-color: #8eb97e;
-        color: white;
-        padding: 15px 0;
-        font-size: 18px;
-        font-weight: 600;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-
-    .f-select, .f-select option {
-        color: #445f76;
-    }
-
-    .login-card {
-        max-width: 500px;
-    }
-</style>
-
+@section Styles
+{
+    <link rel="stylesheet" href="~/css/login-register-form.css" asp-append-version="true" />
+}
 
 <div class="container mt-4">
     <div class="w-50 m-auto login-card">
@@ -99,11 +35,11 @@
                             </label>
                         </div>
                         <div>
-                            <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                            <button id="login-submit" type="submit" class="w-100 btn btn-lg login-btn">Log in</button>
                         </div>
                     </div>
                 </div>
-                <div class="d-flex flex-column mt-3 gap-2">
+                <div class="d-flex flex-column mt-5 gap-3">
 
                     <a id="forgot-password" class="btn btn-danger d-block" asp-page="./ForgotPassword">Forgot your password?</a>
 
@@ -116,83 +52,6 @@
         </section>
     </div>
 </div>
-
-
-
-@* <h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
-                <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label"></label>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-floating">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div>
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
-                    </div>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div> *@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
