--- a/JattanaNursury/Areas/Identity/Pages/Account/Register.cshtml
+++ b/JattanaNursury/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,65 +4,46 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+@section Styles
+{
+    <link rel="stylesheet" href="~/css/login-register-form.css" asp-append-version="true" />
+}
 
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Name" class="form-control" autocomplete="name" aria-required="true" />
-                <label asp-for="Input.Name"></label>
-                <span asp-validation-for="Input.Name" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
+<div class="container mt-4">
+    <div class="w-50 m-auto login-card">
         <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+            <form id="registerForm" class="m-form" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                <h2>Register</h2>
+                <div class="row">
+                    <div class="col-12">
+                        <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                         <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
+                            <label asp-for="Input.Name">Full Name</label>
+                            <input asp-for="Input.Name" class="input" autocomplete="name" aria-required="true" placeholder="Full Name" />
+                            <span asp-validation-for="Input.Name" class="text-danger"></span>
                         </div>
-                    </form>
-                }
-            }
+                        <div class="mt-2">
+                            <label asp-for="Input.Email">Email</label>
+                            <input asp-for="Input.Email" placeholder="Email" class="input" autocomplete="username" aria-required="true" />
+                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        </div>
+                        <div class="mt-2">
+                            <label asp-for="Input.Password">Password</label>
+                            <input asp-for="Input.Password" placeholder="Password" class="input" autocomplete="new-password" aria-required="true" />
+                            <span asp-validation-for="Input.Password" class="text-danger"></span>
+                        </div>
+                        <div class="mt-2">
+                            <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                            <input asp-for="Input.ConfirmPassword" class="input" placeholder="Confirm Password" autocomplete="new-password" aria-required="true" />
+                            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                        </div>
+                        <div class="mt-5 d-flex flex-column gap-3">
+                            <button id="login-submit" type="submit" class="w-100 btn btn-lg login-btn">Register</button>
+                            <a class="w-100 btn red-btn" asp-page="Login">Login instead?</a>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </section>
     </div>
 </div>
