--- a/JattanaNursury/wwwroot/css/login-register-form.css
+++ b/JattanaNursury/wwwroot/css/login-register-form.css
@@ -14,18 +14,19 @@
     border: none;
 }
 
-.m-form .input {
-    display: block;
-    width: 100%;
-    background-color: rgba(255,255,255,0.07);
-    border-radius: 3px;
-    padding: 0.4rem 0.8rem;
-    margin-top: 8px;
-    font-weight: 300;
-}
+    .m-form .input {
+        display: block;
+        width: 100%;
+        border-radius: 3px;
+        padding: 0.4rem 0.8rem;
+        margin-top: 8px;
+        font-weight: 300;
+        background-color: #E8F0FE;
+        color: black !important;
+    }
 
-::placeholder {
-    color: #e5e5e5;
+input::placeholder{
+    color: black;
 }
 
 .login-card {
