--- a/JattanaNursury/Views/Orders/PaidOrders.cshtml
+++ b/JattanaNursury/Views/Orders/PaidOrders.cshtml
@@ -9,4 +9,10 @@
 
 @section Scripts{
     <script src="~/js/paidOrder.js" asp-append-version="true"></script>
+    <script type="text/javascript">
+        let model = @Json.Serialize(Model);
+        $(function () {
+            window.initialize(model);
+        });
+    </script>
 }
