changed styling of website

--- a/JattanaNursury/Views/Home/Index.cshtml
+++ b/JattanaNursury/Views/Home/Index.cshtml
@@ -2,21 +2,21 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1 class="text-primary text-center fs-1">Welcome</h1>
-<div class="container-fluid h-75 d-flex align-items-center">
-    <div class="row">
+<div class="container h-75 d-flex flex-column align-items-center justify-content-evenly">
+    <h1 class="text-primary text-center fs-1">Welcome</h1>
+    <div class="row g-5">
         <div class="col-md-6 col-sm-12">
-            <img class="img-full" src="~/images/website/mainPhoto1.jpg"/>
+            <img class="img-full" src="~/images/website/mainPhoto1.jpg" />
         </div>
         <div class="col-md-12 col-lg-6">
             <div class="d-flex flex-column justify-content-evenly h-100">
-                    <h3 class="text-primary">ITS ALL ABOUT NATURE!</h3>
-                    <p>
-                            Welcome to Jattana FPO, your ultimate destination for a verdant journey into the world of plants! Immerse yourself in the beauty of nature as you explore our diverse collection of handpicked plants, meticulously curated to bring greenery and serenity into your life. From vibrant flowering beauties to elegant foliage, our selection caters to both novice plant enthusiasts and seasoned green thumbs.
-                    </p>
-                    <p>
-                            Each plant is nurtured with care, ensuring that it arrives at your doorstep ready to thrive in its new home. Whether you're adorning your living space, creating an indoor oasis, or enhancing your garden, [Your Website Name] is your trusted source for top-quality plants. Join us in cultivating a greener, more vibrant world—one plant at a time.
-                    </p>
+                <h3 class="text-primary">ITS ALL ABOUT NATURE!</h3>
+                <p class="lead">
+                    Welcome to Jattana FPO, your ultimate destination for a verdant journey into the world of plants! Immerse yourself in the beauty of nature as you explore our diverse collection of handpicked plants, meticulously curated to bring greenery and serenity into your life. From vibrant flowering beauties to elegant foliage, our selection caters to both novice plant enthusiasts and seasoned green thumbs.
+                </p>
+                <p class="lead">
+                    Each plant is nurtured with care, ensuring that it arrives at your doorstep ready to thrive in its new home. Whether you're adorning your living space, creating an indoor oasis, or enhancing your garden, [Your Website Name] is your trusted source for top-quality plants. Join us in cultivating a greener, more vibrant world—one plant at a time.
+                </p>
             </div>
         </div>
     </div>
