changed views as project models are being changed

--- a/ECommerce/Views/Home/Index.cshtml
+++ b/ECommerce/Views/Home/Index.cshtml
@@ -10,12 +10,12 @@
         </div>
         <div class="col-md-12 col-lg-6">
             <div class="d-flex flex-column justify-content-evenly h-100">
-                <h3 class="text-primary">ITS ALL ABOUT NATURE!</h3>
+                <h3 class="text-primary">Product-Mart</h3>
                 <p class="lead">
-                    Welcome to Jattana FPO, your ultimate destination for a verdant journey into the world of plants! Immerse yourself in the beauty of nature as you explore our diverse collection of handpicked plants, meticulously curated to bring greenery and serenity into your life. From vibrant flowering beauties to elegant foliage, our selection caters to both novice plant enthusiasts and seasoned green thumbs.
+                    Welcome to our online marketplace, where convenience meets variety in an unparalleled shopping experience. Explore a world of endless possibilities as you browse through our extensive collection of products spanning every category imaginable. 
                 </p>
                 <p class="lead">
-                    Each plant is nurtured with care, ensuring that it arrives at your doorstep ready to thrive in its new home. Whether you're adorning your living space, creating an indoor oasis, or enhancing your garden, [Your Website Name] is your trusted source for top-quality plants. Join us in cultivating a greener, more vibrant world—one plant at a time.
+                    Our commitment to quality and customer satisfaction is reflected in every product we offer. Embrace the ease of online shopping with our user-friendly platform, and let us be your one-stop destination for all your shopping desires.
                 </p>
             </div>
         </div>
