--- a/ECommerce/wwwroot/css/login-register-form.css
+++ b/ECommerce/wwwroot/css/login-register-form.css
@@ -14,6 +14,11 @@
     border: none;
 }
 
+    .m-form select option {
+        color:var(--p-color);
+    }
+
+
     .m-form .input {
         display: block;
         width: 100%;
@@ -21,7 +26,6 @@
         padding: 0.4rem 0.8rem;
         margin-top: 8px;
         font-weight: 300;
-        background-color: #E8F0FE;
         color: black !important;
     }
 
