--- a/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/Views/Shared/_Layout.cshtml
@@ -44,6 +44,12 @@
                                 </ul>
                             </li>
                         }
+                        @if (User.IsInRole("SuperAdmin"))
+                        {
+                            <li class="nav-item ">
+                                <a class="nav-link text-white" asp-controller="BusinessCategories" asp-action="Index">Business Categories</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
