--- a/ECommerce/Views/Businesses/Edit.cshtml
+++ b/ECommerce/Views/Businesses/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ECommerce.ViewModels.BusinessViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
 @section Styles
@@ -21,7 +21,8 @@
             </div>
         </div>
         <div class="col-md-8 col-sm-12 right-container p-5">
-            <form asp-action="Create" class="create-form" enctype="multipart/form-data">
+            <form asp-action="Edit" asp-controller="Businesses" class="create-form" enctype="multipart/form-data">
+                <input asp-for="Id" type="hidden"/>
                 <span class="text-danger">@Html.ValidationMessage("ErrorMessage")</span>
                 <div class="row g-4">
                     <div class="col-md-6 col-sm-12">
@@ -73,7 +74,7 @@
                             <span asp-validation-for="Address.City" class="text-danger"></span>
                         </div>
                     </div>
-             
+
                     <div class="col-md-4 col-sm-12">
                         <div class="form-group">
                             <label asp-for="Address.Province" class="control-label"></label>
@@ -108,7 +109,7 @@
                     <div class="col-12">
                         <div class="d-flex justify-content-between">
                             <a asp-action="Index" class="btn back-btn">Back to List</a>
-                            <input type="submit" value="Create" class="btn create-btn" />
+                            <input type="submit" value="Edit" class="btn create-btn" />
                         </div>
                     </div>
                 </div>
