--- a/ECommerce/Views/Shared/_BusinessLayout.cshtml
+++ b/ECommerce/Views/Shared/_BusinessLayout.cshtml
@@ -26,27 +26,22 @@
                                 <a class="nav-link text-white" asp-area="" asp-controller="Businesses" asp-action="Index">All Businesses</a>
                             </li>
                         }
-                        @if (User.IsInRole("Customer") || !(User.Identity?.IsAuthenticated ?? false
-                        ))
+                        @if (User.IsInRole("Customer"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+                            </li>
+                        }
+                        @if (!User.IsInRole("Customer") && (User.Identity?.IsAuthenticated ?? false))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="Index">Your Cart</a>
-                            </li>
-                        }
-
-                        @if (User.IsInRole("SuperAdmin") && (User.Identity?.IsAuthenticated ?? false))
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Index">All Products</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Categories" asp-action="Index">All Categories</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link text-white" asp-controller="Orders" asp-action="Create">All Businesses</a>
+                                <a class="nav-link text-white" asp-controller="Orders" asp-action="Create">Add Order</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Orders</a>
