--- a/ECommerce/Views/Shared/_BusinessLayout.cshtml
+++ b/ECommerce/Views/Shared/_BusinessLayout.cshtml
@@ -26,42 +26,31 @@
                                 <a class="nav-link text-white" asp-area="" asp-controller="Businesses" asp-action="Index">All Businesses</a>
                             </li>
                         }
-                        @if (User.IsInRole("Customer"))
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
-                            </li>
-                        }
-                        @if (!User.IsInRole("Customer") && (User.Identity?.IsAuthenticated ?? false))
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link text-white" asp-controller="Orders" asp-action="Create">Add Order</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Orders</a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a class="dropdown-item" asp-controller="Orders" asp-action="PaidOrders">Full Paid</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" asp-controller="Orders" asp-action="UnpaidOrders">Pending Payment</a>
 
-                                    </li>
-                                </ul>
-                            </li>
-                        }
-                        @if (User.IsInRole("SuperAdmin"))
-                        {
-                            <li class="nav-item ">
-                                <a class="nav-link text-white" asp-controller="BusinessCategories" asp-action="Index">Business Categories</a>
-                            </li>
-                        }
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Businesses" asp-action="CurrentBusiness">@ViewBag.CurrentBusinessName</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link text-white" asp-controller="Orders" asp-action="Create">Add Order</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Orders</a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item" asp-controller="Orders" asp-action="PaidOrders">Full Paid</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-controller="Orders" asp-action="UnpaidOrders">Pending Payment</a>
+
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
