--- a/ECommerce/Views/Businesses/Index.cshtml
+++ b/ECommerce/Views/Businesses/Index.cshtml
@@ -29,8 +29,9 @@
 
         <div id="home-cards" class="row">
             @foreach (var item in Model)
-            {<a asp-controller="Businesses" asp-action="CurrentBusiness" asp-route-bId="@item.Id">
+            {
                 <div class="p-3 col-sm-12 col-md-6">
+                    <a asp-controller="Businesses" asp-action="CurrentBusiness" asp-route-bId="@item.Id">
                     <div class="home">
                         <div class="div-img">
                             <img src="~/@Html.DisplayFor(modelItem => item.ImageUrl)" alt="Business Image">
@@ -68,8 +69,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
                 </a>
+                </div>
             }
 
         </div>
