added new business layout referenece for categories and products

--- a/ECommerce/Views/Categories/Edit.cshtml
+++ b/ECommerce/Views/Categories/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ECommerce.Models.Category
 
 @{
+    Layout = "~/Views/Shared/_BusinessLayout.cshtml";
     ViewData["Title"] = "Edit";
 }
 
