--- a/ECommerce/Views/Products/Create.cshtml
+++ b/ECommerce/Views/Products/Create.cshtml
@@ -1,6 +1,7 @@
-﻿@model ECommerce.Models.Product
+﻿@model ECommerce.Models.Product;
 
 @{
+    Layout = "~/Views/Shared/_BusinessLayout.cshtml";
     ViewData["Title"] = "Create";
 }
 
