--- a/ECommerce/Views/Orders/Create.cshtml
+++ b/ECommerce/Views/Orders/Create.cshtml
@@ -1,5 +1,10 @@
 ﻿@model ECommerce.ViewModels.OrderViewModel;
 
+@{
+    Layout = "~/Views/Shared/_BusinessLayout.cshtml";
+    ViewData["Title"] = "Order";
+}
+
 @section Styles
 {
     <link href="~/css/order.css" rel="stylesheet" asp-append-version="true"/>
