changed name of get property address to FullAddress

--- a/ECommerce/Views/Businesses/CurrentBusiness.cshtml
+++ b/ECommerce/Views/Businesses/CurrentBusiness.cshtml
@@ -18,7 +18,7 @@
                     <ul class="home-list">
                         <li class="home-attri">
                             <i class="fa fa-comment"></i>
-                            <span>@Html.DisplayFor(a=>a.Address.Address)</span>
+                            <span>@Html.DisplayFor(a=>a.Address.FullAddress)</span>
                         </li>
                         <li class="home-attri">
                             <i class="fa fa-bars"></i>
