--- a/ECommerce/Views/Businesses/Index.cshtml
+++ b/ECommerce/Views/Businesses/Index.cshtml
@@ -45,7 +45,7 @@
                                 </li>
                                 <li class="home-attri">
                                     <i class="fa fa-bars"></i>
-                                    <span>@Html.DisplayFor(modelItem => item.Address.Address)</span>
+                                    <span>@Html.DisplayFor(modelItem => item.Address.FullAddress)</span>
                                 </li>
                                 <li class="home-attri">
                                     <i class="fa fa-warehouse"></i>
